k8s/hdfs/hdfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hdfs-namenode
  namespace: hdfs-namespace
  labels:
    app: hdfs-app
    component: namenode
spec:
  ports:
  - port: 8020
    targetPort: 8020
    protocol: TCP
    name: hdfs-namenode
selector:
  app: hdfs-app
  component: namenode
type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hdfs-datanode
  namespace: hdfs-namespace
  labels:
    app: hdfs-app
    component: datanode
spec:
  ports:
  - port: 50010
    targetPort: 50010
    protocol: TCP
    name: datanode-data
  - port: 50020
    targetPort: 50020
    protocol: TCP
    name: datanode-ipc
  - port: 50075
    targetPort: 50075
    protocol: TCP
    name: datanode-http
  selector:
    app: hdfs-app
    component: datanode
  type: ClusterIP
